Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138570

[REG 6.9.1 -> 6.10.0 Beta 2] QFileSystemEngine::cloneFileTo hangs on FreeBSD 14.3

XMLWordPrintable

    • Other
    • 35dbd1c3f (dev), 30031563c (6.10)

      The attached project is a minimal set of files from https://github.com/Governikus/AusweisApp

      With Qt 6.9.1 everything is fine in our CI. Windows, macOS, Linux (different distributions) and FreeBSD working like charm. All unit tests are stable.

      When we use Qt 6.10.0 Beta 2 in the exact same environment, only FreeBSD starting to be crazy. A lot of unit test are very flacky and especially the one I attached in the project is no longer terminating in general.

        1. FreeBSD.zip
          16 kB
          Lars Schmertmann
        For Gerrit Dashboard: QTBUG-138570
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            larss Lars Schmertmann
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes